# azscout

./: .dockerignore  .env.docker.example  .gitignore  AzuriteConfig  DECISIONS.md  LICENSE  README.md  __azurite_db_table__.json  docker-compose.yml  main.py  report.html
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/azscout/: config.py  logging_config.py  main.py  scheduler.py
backend/azscout/api/: resources.py  scans.py  stats.py  subscriptions.py
backend/azscout/db/: models.py  session.py
backend/azscout/scanner/: collectors.py  probe.py  runner.py  scoring.py
backend/azscout/schemas/: resource.py  scan.py  stats.py  subscription.py
backend/azscout/subscriptions/: service.py
backend/azscout_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_subscriptions_table.py  0003_resource_kind.py
docs/: permissions.md
frontend/: .dockerignore  Dockerfile  components.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EmptyState.tsx  FilterBar.tsx  FilterPill.tsx  Header.tsx  InsightBanner.tsx  Layout.tsx  MetricCards.tsx  ResourceIcon.tsx  ScoreboardTable.tsx  StatusPill.tsx
frontend/src/hooks/: useLatestScan.ts  useStats.ts  useSubscriptions.ts  useTriggerScan.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/routes/: ManageSubscriptions.tsx  ResourceDetail.tsx  ScanHistory.tsx  Setup.tsx  (+1 more)
(+7 files in other folders)
