[project]
name = "azscout-backend"
version = "0.1.0"
description = "AzScout backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "apscheduler>=3.10.4",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "azure-identity",
  "azure-mgmt-resourcegraph",
  "azure-mgmt-costmanagement",
  "azure-monitor-query==1.4.1",
  "azure-core",
  "jinja2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["azscout*"]

[tool.pytest.ini_options]
pythonpath = ["."]
